--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -6,7 +6,11 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= _("OpenFoundry") %> -- <%= controller.action_name %></title>
 	<%= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
-  <%= javascript_include_tag "prototype", "effects", "transmenu"%>
+  <%= javascript_include_tag "prototype", "effects", "transmenu" %>
+  <%= javascript_include_tag 'calendar/calendar' %>
+  <%= javascript_include_tag "calendar/lang/calendar-en.js" %>
+  <%= javascript_include_tag 'calendar/calendar-setup' %>
+  <%= stylesheet_link_tag 'calendar' %>
 
 </head>
 <body >
