--- a/branches/0.1/app/views/release/new.rhtml
+++ b/branches/0.1/app/views/release/new.rhtml
@@ -1,7 +1,10 @@
 <h1>Project New Release</h1>
-<p>
-<% form_for :release, :action => :new do %>
-  <% render :partial => 'form' %>
-<%= submit_tag "Create" %>
-<% end %>
+<p class=ReleaseBasic>
+  <% form_for :release, @release, :url => {:action => :create} do |f|%>
+    <%= arranged('ReleaseNew', @release, {
+        :editable => f,
+        :fields_per_column => 1
+      }) %>
+    <%= submit_tag "Create" %>
+  <% end %>
 </p>
