--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -40,7 +40,7 @@
 	<%= render :partial => 'partials/login' %>
 	<%if params["project_id"] != nil%>
     <div id="LeftMenu">
-      <%=render :partial => "partials/project_menu"%>
+      <%=render :partial => "partials/project_menu", :locals => {:project_id => params["project_id"]}%>
     </div>
   <%else%>
     <div id="TagCloud">
