--- a/branches/0.1/app/views/releases/edit.rhtml
+++ b/branches/0.1/app/views/releases/edit.rhtml
@@ -1,6 +1,7 @@
-<h1>Release#Eedit</h1>
+<h1>Release#edit</h1>
 <p class=ReleaseBasic>
-  <% form_for :release, @release, :url => {:id => @release,:action => :update} do |f|%>
+  <% form_for :release, @release, :url => {:id => @release,
+    :action => :update}, :html => {:method => :put} do |f|%>
     <%= arranged('ReleaseNew', @release, {
         :editable => f,
         :fields_per_column => 1
