--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -52,6 +52,7 @@
 
 <div id="MainContent">
 <div id="MainBody">
+<p> <%= breadcrumbs %> </p>
 <p style="color: green"><%= flash[:notice] %></p>
 	<%= yield :layout %>
 </div>
