--- a/branches/0.1/app/views/news/list.rhtml
+++ b/branches/0.1/app/views/news/list.rhtml
@@ -8,7 +8,7 @@
     <% if permit?("site_admin") || permit?("admin of :project") -%>
     <p>
       <%= link_to '編輯', :action => 'edit', :id => news %>
-      <%= link_to '刪除', { :action => 'destroy', :id => news }, :confirm => '確定要刪除嗎?', :method => :post %>
+      <%= link_to '刪除', { :action => 'destroy', :id => news }, :confirm => '確定要刪除嗎?', :method => :delete %>
     </p>
     <% end %>
   </li>
