--- a/branches/0.1/app/views/user/home.rhtml
+++ b/branches/0.1/app/views/user/home.rhtml
@@ -4,14 +4,14 @@
 <dt>Admin of:</dt>
 <dd>
 <% @admin_of.each do |p| %>
-  <%= link_to p.unixname, :controller => 'project', :action => 'show', :id => p.id %>
+  <%= link_to p.unixname, project_path(p.id) %>
 <% end %>
 </dd>
 
 <dt>Member of:</dt>
 <dd>
 <% @member_of.each do |p| %>
-  <%= link_to p.unixname, :controller => 'project', :action => 'show', :id => p.id %>
+  <%= link_to p.unixname, project_path(p.id) %>
 <% end %>
 </dd>
 </dl>
