add lang dialog

--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -32,6 +32,9 @@
 			
 		</div>
 	</div>
+        <div>
+                <%= render :partial => 'partials/lang', :locals => {:lang_options => {'中文' => 'zh_TW', 'English' => 'en'}, :current_lang => 'zh_TW'}%>
+        </div>
 </div>
 
 <div id="MiddlePane">
