adds a 'language' field for User

--- a/branches/0.1/app/views/user/_edit.rhtml
+++ b/branches/0.1/app/views/user/_edit.rhtml
@@ -6,6 +6,7 @@
     <%= form_input changeable(user, "lastname"), "lastname" %>
     <%= form_input changeable(user, "login"), "login", :size => 30 %><br/>
     <%= form_input changeable(user, "email"), "email" %>
+    <%= form_input changeable(user, "language"), "language" %>
     <% if submit %>
       <%= form_input :submit_button, user.new_record? ? 'signup' : 'change_settings', :class => 'two_columns' %>
     <% end %>
