--- a/branches/0.1/app/views/partials/_login.rhtml
+++ b/branches/0.1/app/views/partials/_login.rhtml
@@ -1,4 +1,6 @@
 <% if(login?) -%>
+<img src="<%= url_for(:controller => :images, :action => "image", :id => current_user.icon) %>"/>
+<br/>
 <%= _("Welcome") %>! <%=current_user.login%>.
 <br/>
 <%= link_to _("Logout"), { :action => :logout, :controller => :user} %>
