--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -6,7 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= _("OpenFoundry") %> -- <%= controller.action_name %></title>
 	<%= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
-  <%= javascript_include_tag "prototype", "effects", "transmenu" %>
+  <%= javascript_include_tag "application", "prototype", "effects", "transmenu" %>
   <%= javascript_include_tag 'calendar/calendar' %>
   <%= javascript_include_tag "calendar/lang/calendar-en.js" %>
   <%= javascript_include_tag 'calendar/calendar-setup' %>
@@ -33,7 +33,7 @@
 		</div>
 	</div>
         <div>
-                <%= render :partial => 'partials/lang', :locals => {:lang_options => {'中文' => 'zh_TW', 'English' => 'en'}, :current_lang => 'zh_TW'}%>
+                <%= render :partial => 'partials/lang'%>
         </div>
 </div>
 
