--- a/branches/0.1/app/views/partials/_lang.rhtml
+++ b/branches/0.1/app/views/partials/_lang.rhtml
@@ -1,6 +1,4 @@
-<select name='lang' id='LanguageSelect' onchange=
-'<%= remote_function(:update =>'', :url => '') %>'>
-  <%= options_for_select(lang_options, current_lang) %>
+<select name='lang' id='LanguageSelect' onchange="SetLang(this.value)">
+  <%= options_for_select({'中文' => 'zh_TW', 'English' => 'en'}, locale.to_s) %>
 </select>
-	
 
