--- a/branches/0.1/app/views/projects/show.rhtml
+++ b/branches/0.1/app/views/projects/show.rhtml
@@ -30,5 +30,5 @@
 </fieldset>
 
 <%= (link_to 'Edit', :action => 'edit', :id => @project )+'|' if permit?("admin of :project")%> 
-<%= link_to 'Back', :action => 'list' %>
+<%= link_to 'Back', :action => 'index' %>
 </div>
