--- a/branches/0.1/app/views/projects/edit.rhtml
+++ b/branches/0.1/app/views/projects/edit.rhtml
@@ -63,5 +63,5 @@
 </fieldset>
 
 <%= link_to 'Show', :action => 'show', :id => @project %> |
-<%= link_to 'Back', :action => 'list' %>
+<%= link_to 'Back', :action => 'index' %>
 </div>
