--- a/branches/0.1/app/views/projects/new.rhtml
+++ b/branches/0.1/app/views/projects/new.rhtml
@@ -6,5 +6,5 @@
   <%= submit_tag "Create" %>
 <% end %>
 
-<%= link_to 'Back', :action => 'list' %>
+<%= link_to 'Back', :action => 'index' %>
 </div>
