--- a/branches/0.1/app/views/releases/list.rhtml
+++ b/branches/0.1/app/views/releases/list.rhtml
@@ -1,8 +1,14 @@
-<h1>Release#list</h1>
 <div id="ReleaseBasic">
+  <h1>Release#list</h1>
+  <p> <%= viewports_manager(:update => "ReleaseBasic",
+      :url => {:project_id => @project_id,
+        :controller => :releases,
+        :method => :get,
+        :layout => 'false'}
+  ) %> </p> 
   <%= link_to '[new]', 
-      :project_id => @project_id,
-      :action => :new
+    :project_id => @project_id,
+    :action => :new
   %>
   <br/>
   <% @releases.each do |release|%>
@@ -10,13 +16,13 @@
     <%= link_to '[show]', release_url(
       :project_id => @project_id,
       :id => release
-      )
-     %>
+    )
+    %>
     <%= link_to '[edit]', edit_release_url(
       :project_id => @project_id,
       :id => release
-      )
-     %>
+    )
+    %>
     <%= link_to '[delete]', delete_release_url(
       {
         :project_id => @project_id, 
@@ -24,6 +30,6 @@
       }), 
       :confirm => 'Delete?', 
       :method => :post
-     %>
+    %>
   <% end %>
 </div>
