--- a/branches/0.1/app/views/user/_password.rhtml
+++ b/branches/0.1/app/views/user/_password.rhtml
@@ -1,11 +1,13 @@
 <div class="user_password">
-  <%= form_input :hidden_field, 'form', :value => 'change_password' %>
+  <%= f.hidden_field 'form', :value => 'change_password' %>
 
   <table>
-    <%= form_input :password_field, "password", :size => 30 %>
-    <%= form_input :password_field, "password_confirmation", :size => 30 %>
-    <% if submit %>
-      <%= form_input :submit_button, 'change_password' %>
-    <% end %>
+    <label><%= _('User|Password')%>: </label>
+    <%= f.password_field "password", :size => 30 %>
+    <br/>
+    <label><%= _('User|Password Confirmation')%>: </label>
+    <%= f.password_field "password_confirmation", :size => 30 %>
+    <br/>
+    <%= submit_tag _('User|Change Password') if submit%>
   </table>
 </div>                                                                          
