--- a/branches/0.1/app/views/user/change_password.rhtml
+++ b/branches/0.1/app/views/user/change_password.rhtml
@@ -1,14 +1,14 @@
-<div title="<%= title_helper %>" class="form">
-  <%= head_helper :error => true %>
-
+<div title="user change_password" class="form">
+  <%#= head_helper :error => true %>
+  <%= show_flash :user %>
   <div class="form-padding">
-    <%= message_helper 'change' %>
+    <%#= message_helper 'change' %>
 
-    <% start_form_tag_helper do -%>
-      <%= render :partial => 'password', :locals => {:user => @user, :submit => false} %>
+    <% form_for :user, :url => {:action => :change_password} do |f|-%>
+      <%= render :partial => 'password', :locals => {:f =>f, :submit => false} %>
       <div class="button-bar">
-        <%= button_helper 'change_password' %>
-        <%= link_helper 'change_cancel_welcome', :action => 'welcome' %>
+        <%= submit_tag _('User|Change Password') %>
+        <%= link_to _('Cancel'), :action => 'home' %>
       </div>
     <% end -%>
   </div>
