--- a/branches/0.1/app/views/user/forgot_password.rhtml
+++ b/branches/0.1/app/views/user/forgot_password.rhtml
@@ -1,15 +1,16 @@
-<div title="<%= title_helper %>" class="form">
-  <%= head_helper %>
-   
+<div title="user forgot_password" class="form">
+  <%#= head_helper %>
+  <%= show_flash :user %>
   <div class="form-padding">
-    <p><%= message_helper 'forgot_reset' %></p>
+    <%#= message_helper 'forgot_reset' %>
 
-    <% start_form_tag_helper do -%>
-      <%= form_input :text_field, "email", :size => 30 %><br/>
+    <% form_for :user, :url => {:action => :forgot_password} do |f|-%>
+      <label><%= _('User|Email')%>: </label>
+      <%= f.text_field "email", :size => 30 %><br/>
 
       <div class="button-bar">
-        <%= button_helper 'forgot_reset' %>
-        <%= link_helper 'forgot_cancel_login', :action => 'login' %>
+        <%= button_tag _('User|Reset Password') %>
+        <%= link_to _('Cancel'), :action => 'login' %>
       </div>
     <% end -%>
   </div>
