--- a/branches/0.1/app/views/projects/_list.rhtml
+++ b/branches/0.1/app/views/projects/_list.rhtml
@@ -1,5 +1,5 @@
 <div id="ProjectList">
-<h1>Listing projects</h1>
+<h1><%= _('Listing projects') %></h1>
 
 <table>
   <tr>
@@ -23,10 +23,10 @@
 <% end %>
 </table>
 
-<%= link_to 'Previous page', { :page => project_pages.current.previous } if project_pages.current.previous %>
-<%= link_to 'Next page', { :page => project_pages.current.next } if project_pages.current.next %> 
+<%= link_to _('Previous page'), { :page => project_pages.current.previous } if project_pages.current.previous %>
+<%= link_to _('Next page'), { :page => project_pages.current.next } if project_pages.current.next %> 
 
 <br />
 
-<%= link_to 'New project', :action => 'new' %>
+<%= link_to _('New project'), :action => 'new' %>
 </div>
