--- a/branches/0.1/app/views/projects/show.rhtml
+++ b/branches/0.1/app/views/projects/show.rhtml
@@ -9,7 +9,7 @@
 <fieldset>
 <legend><%= _("Project Role") %></legend>
 <dl>
-<dt>Admins:</dt>
+<dt><%= _('Project Admins')%>:</dt>
 <dd>
 <% for admin in @admins %>
 <%= admin.login %>
@@ -17,7 +17,7 @@
 </dd>
 
 
-<dt>Members:</dt>
+<dt><%= _('Project Members') %>:</dt>
 <dd>
 <% if @members.empty? %>
   No member.<br/>
@@ -29,6 +29,6 @@
 </dd>
 </fieldset>
 
-<%= (link_to 'Edit', :action => 'edit', :id => @project )+'|' if permit?("admin of :project")%> 
-<%= link_to 'Back', :action => 'index' %>
+<%= (link_to _('Edit'), :action => 'edit', :id => @project )+'|' if permit?("admin of :project")%> 
+<%= link_to _('Back'), :action => 'index' %>
 </div>
