--- a/branches/0.1/app/views/user/edit.rhtml
+++ b/branches/0.1/app/views/user/edit.rhtml
@@ -1,36 +1,36 @@
-<div title="<%= title_helper %>" class="form">
-  <%= head_helper :error => true %>
-    <%= render :partial => 'images/edit', :locals => 
-      {:image_id => @user.icon, :user_id => @user.id }%>
-    <% start_form_tag_helper do -%>
-      <%= render :partial => 'edit', :locals => {:user => @user, :submit => true} %>
-    <% end -%>
-    </br>
-    <% start_form_tag_helper do -%>
-      <%= render :partial => 'password', :locals => {:submit => true} %>
-    <% end -%>
-
-    <% start_form_tag_helper do -%>
-      <div class="user_delete">
-        <%= form_input :hidden_field, 'form', :value => 'delete' %>
+<div title="user edit" class="form">
+     <%#= head_helper :error => true %>
+     <%= show_flash :user%>
+     <%= render :partial => 'images/edit', :locals => 
+       {:image_id => @user.icon, :user_id => @user.id }%>
+     <% form_for :user, @user, :url => {:action => :edit} do |f|-%>
+       <%= render :partial => 'edit', :locals => {:f => f, :user => @user, :submit => true} %>
+     <% end -%>
+     </br>
+  <% form_for :user, :url => { :action => :edit } do |f|-%>
+    <%= render :partial => 'password', :locals => {:f => f, :submit => true} %>
+  <% end -%>
+  
+  <% form_for :user, :url => { :action => :delete } do |f| -%>
+    <div class="user_delete">
+      <%= hidden_field_tag 'form', :value => 'delete' %>
+      <%= submit_tag _('Delete Account') %>
+    </div>
+  <% end -%>
+  <fieldset>
+    <% form_tag :action => 'add_tag', :id => @user do %>
+      <label for="tag">Add a tag:</label><br/>
+      <%= hidden_field_tag 'class', 'User' %>
+      <%= text_field_tag 'tag', '',{:size => 10} %>
+      <%= submit_tag 'Add Tag' %>
+    <% end %>
     
-        <%= form_input :submit_button, 'delete_account' %>
-      </div>
-    <% end -%>
-<fieldset>
-        <% form_tag :action => 'add_tag', :id => @user do %>
-        <label for="tag">Add a tag:</label><br/>
-        <%= hidden_field_tag 'class', 'User' %>
-        <%= text_field_tag 'tag', '',{:size => 10} %>
-        <%= submit_tag 'Add Tag' %>
-        <% end %>
-
-        <% form_tag :action => 'remove_tag', :id => @user do %>
-        <label for="tag">Remove a tag:</label><br/>
-        <%= hidden_field_tag 'class', 'User' %>
-	<%= select_tag 'tag[]', options_for_select(@user.tag_list.names.collect {|s| [s,s] }), { :multiple => true, :size => 10} %>
-        <%= submit_tag 'Remove Tag' %>
-        <% end %>
-</fieldset>
-  </div>
+    <% form_tag :action => 'remove_tag', :id => @user do %>
+      <label for="tag">Remove a tag:</label><br/>
+      <%= hidden_field_tag 'class', 'User' %>
+      <%= select_tag 'tag[]', options_for_select(@user.tag_list.names.collect {|s| [s,s] }), { :multiple => true, :size => 10} %>
+      <%= submit_tag 'Remove Tag' %>
+    <% end %>
+  </fieldset>
+</div>
 </div>
