--- a/branches/0.1/app/views/user/home.rhtml
+++ b/branches/0.1/app/views/user/home.rhtml
@@ -1,14 +1,14 @@
-<h1>Welcome Home</h1>
+<h1><%= _('My projects') %></h1>
 
 <dl>
-<dt>Admin of:</dt>
+<dt><%= _('Admin of')%>:</dt>
 <dd>
 <% @admin_of.each do |p| %>
   <%= link_to p.unixname, project_path(p.id) %>
 <% end %>
 </dd>
 
-<dt>Member of:</dt>
+<dt><%= _('Member of')%>:</dt>
 <dd>
 <% @member_of.each do |p| %>
   <%= link_to p.unixname, project_path(p.id) %>
