--- a/branches/0.1/app/views/user/login.rhtml
+++ b/branches/0.1/app/views/user/login.rhtml
@@ -1,10 +1,8 @@
 <div title="Login Form" class="form">
   <h1><%= _("Login to OpenFoundry") %></h1>
-  <% if flash[:message] -%>
-    <h1><%= flash[:message] %> </h1>
-  <%end%>
+  <%= show_flash %>
   <div class="form-padding">
-    <% start_form_tag_helper do -%>
+    <% form_tag '/user/login' do -%>
       <label for="user_login"><%= _("Login ID") %>:</label><%= text_field("user", "login", :size => 30) %> 
       <label for="user_password"><%= _("Password") %>:</label><%= password_field("user", "password", :size => 30) %> 
       <div class="button-bar">
