--- a/branches/0.1/app/views/news/_listn.rhtml
+++ b/branches/0.1/app/views/news/_listn.rhtml
@@ -6,4 +6,4 @@
     </li>
     <%end %>
   </ul>
-  <%=link_to "更多", :controller => "news", :action => "list" %>
+  <%=link_to "更多", :controller => "news", :action => "project" %>
