--- a/branches/0.1/app/views/partials/_project_menu.rhtml
+++ b/branches/0.1/app/views/partials/_project_menu.rhtml
@@ -1,4 +1,4 @@
-	
+<img src="<%= url_for(:controller => :images, :action => "image", :id => Project.find(project_id).icon) %>"/>
 		<h3>專案功能</h3>
     <ul>
         <li>專案資訊</a>
