--- a/branches/0.1/app/views/projects/_list.rhtml
+++ b/branches/0.1/app/views/projects/_list.rhtml
@@ -4,21 +4,15 @@
 <table>
   <tr>
     <th></th>
-  <% my_content_columns = Project.content_columns.select { |x| x.name =~ /unixname|projectname/i } %>
-  <% for column in my_content_columns %>
-    <th><%= column.human_name %></th>
-  <% end %>
-    <th/><th/><th/>
+    <th><%= _('Project UNIX Name') %></th>
+    <th><%= _('Project Name') %></th>
   </tr>
   
 <% for project in projects %>
   <tr>
     <td><img src="<%= url_for(:controller => :images,:action => "image", :id => project.icon,:size => 16) %>"/></td>
-  <% for column in my_content_columns %>
-    <td><%=h project.send(column.name) %></td>
-  <% end %>
-  <%@project = project%>
-  <%= render(:partial => "/partials/sed", :locals => { :project => project }) %>
+    <td><a href="<%= url_for(:action => 'show', :id => project.id) %>"><%= h project.unixname %></a></td>
+    <td><%= h project.projectname %></td>
   </tr>
 <% end %>
 </table>
