--- a/branches/0.1/app/views/projects/kwiki.rhtml
+++ b/branches/0.1/app/views/projects/kwiki.rhtml
@@ -1,2 +1,2 @@
-<%= render( :partial => "tabnav" ) %>
+<%# render( :partial => "tabnav" ) %>
 <iframe id="wiki" src="http://rt.openfoundry.org/Kwiki0.1/<%= @project.unixname %>/index.cgi?" frameborder="no" scrolling="auto" style="width:100%; height:150px;" />
