--- a/branches/0.1/app/views/projects/show.rhtml
+++ b/branches/0.1/app/views/projects/show.rhtml
@@ -1,4 +1,4 @@
-<%= render( :partial => "tabnav" ) %>   
+<%#= render( :partial => "tabnav" ) %>   
 <div id="ProjectBasic">
 <dl>
 <% for column in Project.content_columns %>
