--- a/branches/0.1/app/views/projects/sympa.rhtml
+++ b/branches/0.1/app/views/projects/sympa.rhtml
@@ -1,2 +1,2 @@
-<%= render( :partial => "tabnav" ) %>
+<%# render( :partial => "tabnav" ) %>
 <iframe name="<%= @project.unixname %>" id="sympa" src="<%= @Path %>" frameborder="0" scrolling="auto" style="border:none; width:930px; height:150px;" />
