--- a/branches/0.1/app/views/partials/_login.rhtml
+++ b/branches/0.1/app/views/partials/_login.rhtml
@@ -1,9 +1,9 @@
 <% if(login?) -%>
   <% if params[:project_id] -%>
-    <img src="<%= url_for(:controller => :images, :action => "image", :id => current_user.icon, :size => 16) %>"/>
-    &nbsp;&nbsp;&nbsp;  
+    <img src="<%= url_for(:controller => :images, :action => "image", :id => current_user.icon, :size => 24) %>"/>
+    &nbsp;
     <%= _("Welcome") %>! <%=current_user.login%> 
-    &nbsp;&nbsp;&nbsp;
+    &nbsp;
     <%= link_to _("Logout"), { :action => :logout, :controller => :user} %>
   <% else -%>
     <img src="<%= url_for(:controller => :images, :action => "image", :id => current_user.icon) %>"/>
