--- a/branches/0.1/app/views/user/_edit.rhtml
+++ b/branches/0.1/app/views/user/_edit.rhtml
@@ -7,11 +7,9 @@
     <%= f.text_field "lastname" %><br/>
     <label><%= _('User|Login')%>: </label>
     <%= f.text_field "login", :size => 30 %><br/>
-    <label><%= _('User|Email')%>: </label>
-    <%= f.text_field "email" %><br/>
     <label><%= _('User|Language')%>: </label>
     <%= f.text_field "language" %><br/>
-    <%= submit_tag( user.new_record? ? _('User|Signup') : _('User|Change Settings') ) if submit %>
+    <%= submit_tag( new_record ? _('User|Signup') : _('User|Change Settings') ) if submit %>
     
   </table>
 </div>
