--- a/branches/0.1/app/views/user/signup.rhtml
+++ b/branches/0.1/app/views/user/signup.rhtml
@@ -1,13 +1,12 @@
-<div title="<%= title_helper %>" class="form">
-  <%= head_helper :error => true %>
-
+<div title="user signup" class="form">
+  <%#= head_helper :error => true %>
+  <%= show_flash :user %>
   <div class="form-padding">
-    <% start_form_tag_helper do -%>
-      <%= render :partial => 'edit', :locals => { :user => @user, :submit => false} %></br>
-      <%= render :partial => 'password', :locals => { :submit => false} %>
-      
+    <% form_for :user, :url => {:action => :signup} do |f|-%>
+      <%= render :partial => 'edit', :locals => { :f => f, :user => @user, :submit => false} %></br>
+      <%= render :partial => 'password', :locals => { :f => f, :submit => false} %>
       <div class="button-bar">
-        <%= button_helper 'signup' %>
+        <%= submit_tag _('User|Signup') %>
       </div>
     <% end -%>
   </div>
