fix show_flash, apply new show_flash

--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -55,7 +55,7 @@
 <div id="MainContent">
 <div id="MainBody">
 <p> <%= breadcrumbs %> </p>
-<%#*<p style="color: green"><%= flash[:notice] </p>%>
+<%= show_flash %>
 	<%= yield :layout %>
 </div>
 </div>
