--- a/branches/0.1/app/views/user/change_password.rhtml
+++ b/branches/0.1/app/views/user/change_password.rhtml
@@ -1,6 +1,6 @@
 <div title="user change_password" class="form">
   <%#= head_helper :error => true %>
-  <%= show_flash :user %>
+  <%= error_messages_for :user %>
   <div class="form-padding">
     <%#= message_helper 'change' %>
 
