--- a/branches/0.1/app/views/user/forgot_password.rhtml
+++ b/branches/0.1/app/views/user/forgot_password.rhtml
@@ -1,6 +1,6 @@
 <div title="user forgot_password" class="form">
   <%#= head_helper %>
-  <%= show_flash :user %>
+  <%= error_messages_for :user  %>
   <div class="form-padding">
     <%#= message_helper 'forgot_reset' %>
 
