--- a/branches/0.1/app/views/user/signup.rhtml
+++ b/branches/0.1/app/views/user/signup.rhtml
@@ -1,6 +1,6 @@
 <div title="user signup" class="form">
   <%#= head_helper :error => true %>
-  <%= show_flash :user %>
+  <%= error_messages_for :user %>
   <div class="form-padding">
     <% form_for :user, :url => {:action => :signup} do |f|-%>
       <%= render :partial => 'edit', :locals => { :f => f, :user => @user, :submit => false} %></br>
