--- a/branches/0.1/app/views/projects/_list.rhtml
+++ b/branches/0.1/app/views/projects/_list.rhtml
@@ -17,8 +17,7 @@
 <% end %>
 </table>
 
-<%= link_to _('Previous page'), { :page => project_pages.current.previous } if project_pages.current.previous %>
-<%= link_to _('Next page'), { :page => project_pages.current.next } if project_pages.current.next %> 
+<%= will_paginate projects %>
 
 <br />
 
