--- a/branches/0.1/app/views/news/show.rhtml
+++ b/branches/0.1/app/views/news/show.rhtml
@@ -10,7 +10,7 @@
 </div>
 
 <p class="tags">標籤:<%=@news.tags%></p>
-<% if permit?("site_admin") || permit?("admin of :project") -%>
+<% if permit?("site_admin") || (@project != nil && permit?("admin of :project")) -%>
 <p>
   <%= link_to '編輯', :action => 'edit', :id => @news %>
   <%= link_to '刪除', { :action => 'destroy', :id => @news }, :confirm => '確定要刪除嗎?', :method => :delete %>
