--- a/branches/0.1/public/stylesheets/openfoundry.css
+++ b/branches/0.1/public/stylesheets/openfoundry.css
@@ -148,7 +148,7 @@ text-decoration:none;
 /* For Flash */
 .flasherror, .flashwarning, .flashnotice, .flashmessage
 {
-  background:#FFEE9F url(/images/icon/error.gif) no-repeat scroll 3px 1px;
+  background:#FFEE9F url(/images/icon/error.gif) no-repeat scroll 10px 7px;
   border:1px solid #FFD71F;
   margin:5px 20px;
   padding:7px 45px;
@@ -156,21 +156,25 @@ text-decoration:none;
 }
 .flasherror
 {
-  background: #FFCFD8 url(/images/icon/error.gif);
+  background-color: #FFCFD8;
+  background-image: url(/images/icon/error.png);
   border-color: #EEBEC7;
 }
 .flashwarning
 {
-  background: #FFEE9F url(/images/icon/warning.gif);
+  background-color: #FFEE9F;
+  background-image: url(/images/icon/warning.png);
   border-color: #EEDD8E;
 }
 .flashnotice
 {
-  background: #D1EAEF url(/images/icon/notice.gif);
+  background-color: #D1EAEF;
+  background-image: url(/images/icon/notice.png);
   border-color: #C0D9DE;
 }
 .flashmessage
 {
-  background: #E3EFB3 url(/images/icon/message.gif);
+  background-color: #E3EFB3;
+  background-image: url(/images/icon/message.png);
   border-color: #D2DEA2;
 }
